k8s/applications/services/homeautomation/homeassistant/manifests/homeassistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
  serviceName: "home-assistant"
  replicas: 1
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      nodeSelector:
        # Pinned to worker 1 for reasons of mDNS discoverability. This whole set will be moved to something cleaner at a later date.
        kubernetes.io/hostname: ln-k8s-wkr-1.leachnet
      containers:
      - name: ha
        image: ghcr.io/home-assistant/home-assistant:2024.1
        resources:
          requests:
            memory: "500Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "2"
        ports:
        - containerPort: 8123
          protocol: TCP
          name: http
        - containerPort: 12811
          protocol: TCP
          name: ocpp
        - containerPort: 51828
          protocol: TCP
          name: hap0
        - containerPort: 21065
          protocol: TCP
          name: hap1
        - containerPort: 21066
          protocol: TCP
          name: hap2
        - containerPort: 21067
          protocol: TCP
          name: hap3
        - containerPort: 21068
          protocol: TCP
          name: hap4
        - containerPort: 21069
          protocol: TCP
          name: hap5
        - containerPort: 21070
          protocol: TCP
          name: hap6
          #          securityContext:
          #            privileged: true
          #            procMount: Default
        volumeMounts:
        - name: config
          mountPath: /config
        - name: localtime
          mountPath: /etc/localtime
        - name: secrets
          mountPath: /config/secrets.yaml
          readOnly: true
          subPath: secrets.yaml
      - name: appdaemon
        image: acockburn/appdaemon:latest
        ports:
        - containerPort: 5050
          protocol: TCP
          name: dash
        volumeMounts:
        - name: config
          mountPath: /conf
        - name: config
          mountPath: /conf/apps
          subPath: appdaemon/apps
        - name: localtime
          mountPath: /etc/localtime
        - name: secrets
          mountPath: /conf/secrets.yaml
          readOnly: true
          subPath: secrets.yaml
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: secrets
        secret:
          secretName: homeassistant
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "vault-fast-nfs"
      resources:
        requests:
          storage: 10Gi
