k8s/applications/services/homeautomation/homeassistant/manifests/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: homeassistant-ingress
spec:
  rules:
  - host: ha.home.theleachfamily.me.uk
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant-http
            port:
              name: http
  - host: ha.home.theleachfamily.me.uk
    http: *http_rules
  tls:
  - hosts:
    - ha.home.theleachfamily.me.uk
    secretName: home-assistant-cert
